--- a/ConfluxMobile/Conflux.UI/Controls/HighlightEvents.xaml
+++ b/ConfluxMobile/Conflux.UI/Controls/HighlightEvents.xaml
@@ -9,7 +9,7 @@
     Loaded="OnControlLoaded">
 
     <UserControl.Resources>
-        <CollectionViewSource x:Name="EventsGroupsCollectionViewSource" Source="{Binding EventsGroups}" IsSourceGrouped="True" />
+        <CollectionViewSource x:Name="EventsGroupsCollectionViewSource" Source="{Binding Weeks}" IsSourceGrouped="True" />
     </UserControl.Resources>
 
     <Grid>
@@ -33,12 +33,13 @@
                             <!-- HidesIfEmpty="True" -->
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate>
-                                    <Border BorderBrush="Teal" BorderThickness="2" Margin="5">
+                                    <Border BorderBrush="Teal" BorderThickness="2" Margin="5"
+                                            HorizontalAlignment="Stretch">
                                         <StackPanel Margin="2">
-                                            <TextBlock FontSize="12" Text="{Binding ShortDay}" Foreground="Teal"
+                                            <TextBlock FontSize="12" Text="{Binding WeekLabel}" Foreground="Teal"
                                                        VerticalAlignment="Top" HorizontalAlignment="Right" 
                                                        Padding="0, 2, 5, 0"/>
-                                            <TextBlock FontSize="28" Text="{Binding Key}"
+                                            <TextBlock FontSize="28" Text="{Binding DaysLabel}"
                                                        Foreground="Teal"
                                                        VerticalAlignment="Bottom" HorizontalAlignment="Left"
                                                        Padding="5, 0, 5, 2"/>
@@ -56,12 +57,12 @@
                           Background="#C0F5F5F5" Padding="10">
                     <GridView.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Background="Teal"
-                                        Width="100" Height="85" Margin="5">
-                                <TextBlock FontSize="12" Text="{Binding Group.ShortDay}" Foreground="White"
+                            <StackPanel Background="Teal" Height="85" Margin="5"
+                                        HorizontalAlignment="Stretch">
+                                <TextBlock FontSize="12" Text="{Binding Group.WeekLabel}" Foreground="White"
                                            VerticalAlignment="Top" HorizontalAlignment="Right" 
                                            Padding="0, 5, 5, 0"/>
-                                <TextBlock FontSize="28" Text="{Binding Group.Key}"
+                                <TextBlock FontSize="28" Text="{Binding Group.DaysLabel}"
                                            Foreground="WhiteSmoke"
                                            VerticalAlignment="Bottom" HorizontalAlignment="Left"
                                            Padding="5, 0, 5, 5"/>
